--- a/package.json
+++ b/package.json
@@ -2,9 +2,16 @@
   "name": "@intility/cypress-msal",
   "version": "0.1.3",
   "description": "A cypress plugin for projects using @azure/msal-browser.",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "exports": {
+    ".": "./dist/index.js",
+    "./command": "./dist/command.js",
+    "./package.json": "./dist/package.json"
+  },
   "type": "commonjs",
+  "types": "dist/index.d.ts",
   "scripts": {
+    "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "homepage": "https://github.com/Intility/cypress-msal",
@@ -30,5 +37,12 @@
   "license": "MIT",
   "dependencies": {
     "@azure/msal-node": "^1.6.0"
+  },
+  "devDependencies": {
+    "cypress": "^9.5.1",
+    "typescript": "^4.6.2"
+  },
+  "peerDependencies": {
+    "cypress": "^9.5.1"
   }
 }
