fix: correct types and exports

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,8 +5,9 @@
     "module": "commonjs",
     "moduleResolution": "node",
     "esModuleInterop": true,
-    "outDir": "dist",
+    "outDir": "./",
     "declaration": true
   },
-  "include": ["src"]
+  "include": ["src"],
+  "exclude": []
 }
