--- a/package.json
+++ b/package.json
@@ -2,14 +2,9 @@
   "name": "@intility/cypress-msal",
   "version": "0.2.1",
   "description": "A cypress plugin for projects using @azure/msal-browser.",
-  "main": "dist/index.js",
-  "exports": {
-    ".": "./dist/index.js",
-    "./command": "./dist/command.js",
-    "./package.json": "./dist/package.json"
-  },
+  "main": "index.js",
   "type": "commonjs",
-  "types": "dist/index.d.ts",
+  "types": "index.d.ts",
   "scripts": {
     "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
